# agent-from-scratch

./: README.md  env.template  pyproject.toml  requirements.txt
notebooks/: 01_Stop.ipynb  02_StructuredOutput.ipynb  03_BindTools.ipynb  04_Agents.ipynb
